--- a/skills/c-strings.html
+++ b/skills/c-strings.html
@@ -29,6 +29,7 @@
                     <p class="process-label">Strings in C</p>
                     <p>Unlike many higher level languages, C does not have a String class.</p>
                     <p>In C, a string is simply a 1D array of <span class="k">char</span>s.</p>
+                    <p>Each string ends with the null pointer <span class="k">'\0'</span>.</p>
                 </div>
             <!-- </div> -->
         </div>
