--- a/skills/c-typedef.html
+++ b/skills/c-typedef.html
@@ -26,6 +26,7 @@
             <h1>typedef</h1> 
                 <div class="process">
                     <p class="process-label">typedef</p>
+                    <p>The <span class="k">typedef</span> keyword is used to give a defined type a new name.</p>
                 </div>
         </div>
     </div>
