--- a/skills/division-algo.html
+++ b/skills/division-algo.html
@@ -26,8 +26,15 @@
             <h1>Division Algorithm</h1> 
                 <!-- <div class="definition"> -->
                     <div class="process" id="rp">
-                        <p class="process-label">Divides</p>
-                        <p>If \(a, b \in Z\) and \(b \neq 0\), and there is an integer \(n\) such that \(a = bn\), we say that \(b\) <span class="k">divides</span> \(a\), \(b\) is a <span class="k">divisor</span> of \(a\), \(a\) is a <span class="k">multiple</span> of \(b\), and we write \(b|a\).</p>
+                        <p class="process-label">Division</p>
+                        <p>If \(a, b \in Z\) and \(b \neq 0\), and there is an integer \(n\) such that \(a = bn\), we say that 
+                            <ol>
+                                <li>\(b\) <span class="k">divides</span> \(a\) </li>
+                                <li>\(b\) is a <span class="k">divisor</span> of \(a\) </li>
+                                <li>\(a\) is a <span class="k">multiple</span> of \(b\) </li>
+                            </ol>
+                            <span>and we write \(b|a\) ("\(b\) divides \(a\)").</span>
+                        </p>
                     </div>
                     <!-- <div class="process example" id="rex">
                         <p>The fibonacci sequence is defined as $$f(0) = f(1) = 1$$ $$f(n) = f(n-1) + f(n-2) \text{ for } n \geq 2$$</p>
