--- a/skills/faraday-maxwells-equations.html
+++ b/skills/faraday-maxwells-equations.html
@@ -27,13 +27,9 @@
             <table>
                 <tr><td>$$\oint \vec{E}\cdot\hat{n}dA = {1\over \varepsilon_0}\sum Q_\text{inside the surface}$$</td><td>Gauss's Law</td></tr>
                 <tr><td>$$\oint \vec{B}\cdot\hat{n}dA = 0$$</td><td>Gauss's Law for Magnetism</td></tr>
-                <tr><td></td><td>Faraday's Law</td></tr>
-                <tr><td></td><td>Amp&egrave;re's law (incomplete)</td></tr>
+                <tr><td>$$\oint \vec E_{NC} \cdot d\vec{l} = -{d \over dt}\int \vec{B}\cdot\hat{n}dA$$</td><td>Faraday's Law</td></tr>
+                <tr><td>$$\oint \vec{B} \cdot d\vec{l} = \mu_0 \sum{I_{\text{inside path}}} $$</td><td>Amp&egrave;re's law (incomplete)</td></tr>
             </table>
-            <div class="process">
-                <p class="process-label">Faraday's Law</p>
-                <p>$$\oint \vec E_{NC} \cdot d\vec{l} = -{d \over dt}\int \vec{B}\cdot\hat{n}dA$$</p>
-            </div>
         </div>
     </div>
             
