--- a/skills/graph-basics.html
+++ b/skills/graph-basics.html
@@ -29,20 +29,20 @@
                 <p>A graph \(G\) is a pair \((V, E)\) where</p>
                 <ul>
                     <li>\(V\) is the set of vertices</li>
-                    <li>\(E\) is the set of edges (pairs of vertices)</li>
+                    <li>\(E\) is the set of edges (connections between two vertices)</li>
                 </ul>
             </div>
             <div class="process">
                 <p class="process-label">Terminology</p>
-                <p>An edge is <span class="k">incident</span> with each of the vertices it connects.</p>
-                <p>Two vertices connected by an edge are <span class="k">adjacent</span>.</p>
+                <p>We say that an edge is <span class="k">incident</span> with both of the vertices it connects.</p>
+                <p>Two vertices connected by an edge are <span class="k">adjacent</span> to each other.</p>
                 <p>A <span class="k">loop edge</span> is an edge that connects a vertex to itself.</p>
                 <p>A <span class="k">loop-free graph</span> is a graph with no loop edges.</p>
             </div>
             <div class="process">
                 <p class="process-label">Path, Polygon</p>
-                <p>\(P_n\): path with \(n\) edges \((n >= 1)\). has \(n + 1\) vertices</p>
-                <p>\(C_n\)</p>
+                <p>\(P_n\): path with \(n\) edges \((n \geq 1)\). has \(n + 1\) vertices</p>
+                <!-- <p>\(C_n\)</p> -->
             </div>
         </div>
     </div>
