--- a/skills/int-partitions.html
+++ b/skills/int-partitions.html
@@ -30,6 +30,7 @@
                     <p>A partition of a positive integer is a combination of positive integers that add up to it.</p>
                 </div>
                 <div class="process example" id="pex">
+                    <p class="process-label">Example</p>
                     <p>There are three partitions of 3: 3, 2 + 1, and 1 + 1 + 1.</p>
                     <p>2 + 1 and 1 + 2 are not counted as separate partitions!</p>
                 </div>
