--- a/skills/poisson-dist.html
+++ b/skills/poisson-dist.html
@@ -26,10 +26,12 @@
             <h1>Poisson Distribution</h1>
             <div class="process">
                 <p class="process-label">Poisson Process</p>
-                <p>Poisson process: Consists of small intervals \(\Delta t\). As \(\Delta t\) tends to 0,</p>
-                <p>1. The probability of more than one event in the subinterval tends to 0.</p>
-                <p>2. The probability of one event in the subinterval tends to \(\lambda \Delta t\).</p>
-                <p>3. Events within subintervals are independent of those in other subintervals.</p>
+                <p>Poisson process: Used to model <i>how long</i> until the next occurence of an event, typically natural disasters and such. Consists of small intervals \(\Delta t\). As \(\Delta t\) approaches 0,</p>
+                <ol>
+                    <li>The probability of <span class="k">more than one event</span> in the subinterval tends to 0.</li>
+                    <li>The probability of <span class="k">one event</span> in the subinterval tends to \(\lambda \Delta t\).</li>
+                    <li>Events within subintervals are independent of events in other subintervals.</li>
+                </ol>
             </div>
             <!-- <div class='definition'> -->
                 <div class="process" id="p1">
