--- a/skills/ajax.html
+++ b/skills/ajax.html
@@ -32,14 +32,14 @@
                     <p class="process-label">XMLHttpRequest</p>
                     <p>The <span class="k">readystatechange</span> handler was the only handler defined in the first version of XMLHttpRequest. <span class="k">Load</span>, <span class="k">error</span>, <span class="k">abort</span>, and <span class="k">timeout</span> have replaced it in later versions to increase clarity and specificity.</p>
                 </div>
-                <div class="process">
+                <!-- <div class="process">
                     <p class="process-label">XMLHttpRequest result handlers</p>
                     <p></p>
-                </div>
-                <div class="process">
+                </div> -->
+                <!-- <div class="process">
                     <p class="process-label">XMLHttpRequest progress handlers</p>
                     <p></p>
-                </div>
+                </div> -->
                 <div class="process">
                     <p class="process-label">HTTP response status</p>
                     <table>
@@ -56,14 +56,14 @@
                         <tr><td>500</td><td>Internal Server Error</td></tr>
                         <tr><td>503</td><td>Service Unavailable</td></tr>
                     </table>
-                    <p>Click <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Status" target="_blank">here</a> for full status code documentation.</p>
+                    <p>Click <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Status" target="_blank" class="k">here</a> for full status code documentation.</p>
                 </div>
                 <div class="process">
                     <p class="process-label">Response Data</p>
                     <p><span class="k">responseType</span> is set to tell the browser what response data format to expect.</p>
                     <ul>
-                        <li>If <span class="k">responseType == "json"</span></li>
-                        <li>If <span class="k">responseType == "" or "text"</span></li>
+                        <!-- <li>If <span class="k">responseType == "json"</span></li> -->
+                        <!-- <li>If <span class="k">responseType == "" or "text"</span></li> -->
                         <li>If <span class="k">responseType == "document"</span>, the browser treates the response as an XML document.</li>
                     </ul>
                 </div>
