--- a/skills/bitwise-logic-ops.html
+++ b/skills/bitwise-logic-ops.html
@@ -8,6 +8,8 @@
 	<link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type='text/javascript' src='/js/index.js'></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body onload="writeOutline('areas', 'Bitwise Logic Operators')">
     <div include-html='/header.html' src='/js/index.js'></div>
@@ -22,7 +24,13 @@
         
         <div class="content">
             <h1>Bitwise Logic Operators</h1> 
-            <div style="height:350px"></div>
+            <table>
+                <tr><th>A</th><th>B</th><th>A AND B</th></tr>
+                <tr><td>0</td><td>0</td><td>0</td></tr>
+                <tr><td>0</td><td>1</td><td>0</td></tr>
+                <tr><td>1</td><td>0</td><td>0</td></tr>
+                <tr><td>1</td><td>1</td><td>1</td></tr>
+            </table>
 
         </div>
     </div>
