--- a/skills/uc-disk.html
+++ b/skills/uc-disk.html
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('areas', 'Uniformly Charged Disk')">
+<body onload="writeOutline('areas', 'Disks')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
@@ -30,5 +30,6 @@
                 </div>
         </div>
     </div>
+    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>  
 </body>
 </html>
