--- a/skills/ajax.html
+++ b/skills/ajax.html
@@ -64,7 +64,7 @@
                     <ul>
                         <!-- <li>If <span class="k">responseType == "json"</span></li> -->
                         <!-- <li>If <span class="k">responseType == "" or "text"</span></li> -->
-                        <li>If <span class="k">responseType == "document"</span>, the browser treates the response as an XML document.</li>
+                        <li>If <span class="k">responseType == "document"</span>, the browser treats the response as an XML document.</li>
                     </ul>
                 </div>
         </div>
