--- a/skills/bitwise-logic-ops.html
+++ b/skills/bitwise-logic-ops.html
@@ -31,7 +31,16 @@
                 <tr><td>1</td><td>0</td><td>0</td></tr>
                 <tr><td>1</td><td>1</td><td>1</td></tr>
             </table>
-
+            <div class="process" id="rp">
+                <p class="process-label">NOT</p>
+                <p>The <span class="k">NOT</span> operator takes in one bit. </p>
+                <p>If the bit is \(0\), it returns \(1\); if the bit is \(1\), it returns \(0\). </p>
+            </div>
+            <div class="process" id="rp">
+                <p class="process-label">AND</p>
+                <p>The <span class="k">AND</span> operator takes in two bits. </p>
+                <p>It returns \(1\) if both bits are \(1\); otherwise it returns \(0\). </p>
+            </div>
         </div>
     </div>
     <div include-html='/footer-nm.html' src='/js/index.js'></div>
