--- a/skills/cont-probdists.html
+++ b/skills/cont-probdists.html
@@ -28,66 +28,18 @@
             <h1>Continuous Probability Distributions</h1>
             <div class="definition">
                 <div class="process" id="cp">
-                    <p class="process-label" onclick="loadex('cex','cp')">Complete Graphs</p>
-                    <p>Given a set of \(n\) vertices \(V\),</p>
-                    <p>The complete graph on \(V\), \(K_n\), is a loop-free undirected graph where for all \(a,b \in V, a \neq b\), there is an edge \(\{a,b\}\).</p>
-                    <p>The number of edges will be \(\begin{pmatrix} n \\ 2 \end{pmatrix}\).</p>
-                </div>
-                <div class="process example" id="cex">
-                    <p class="process-label">Example</p>
-                    <p>To make a complete graph from \(V= \{\)<input type="text" value="a, b, c" id="vertexSet" onkeyup="resize('vertexSet')">\(\}\), the set of edges must be \(E = \) <span id='edgeSet'>\(\{(a, b), (a, c), (b, c)\}\)</span>.</p>
-                    <p id="calcEdges">You'll have \(\begin{pmatrix} 3 \\ 2 \end{pmatrix} = {3! \over 2!(3-2)!} = 3\) edges since the graph is composed of 3 vertices.</p>
-                    <script>
-                        vertices = document.querySelector('#cex #vertexSet');
-                        edgeSet = document.querySelector('#cex #edgeSet');
-                        calcEdges = document.querySelector('#cex #calcEdges');
-                        vertices.addEventListener("keyup",  update);
-                        function update() {
-                            edgeSet.innerHTML = '';
-                            vertices = document.querySelector('#cex #vertexSet').value.split(',');
-                            vertices = vertices.filter(element => {
-                                return element.trim() !== '';
-                            });
-                            for (i = 0; i < vertices.length; i++) {
-                                vertices[i] = vertices[i].trim();
-                            }
-                            edgeSet.innerHTML += '\\(\\{\\)';
-                            for (i = 0; i < vertices.length; i++) {
-                                for (j = i; j < vertices.length; j++) {
-                                    if (j > i && i < vertices.length - 1) {
-                                        edgeSet.innerHTML += '\\((' + vertices[i] + ', ' + vertices[j] + ')';
-                                        edgeSet.innerHTML += (i == vertices.length - 2 && j == vertices.length - 1 ? '\\)' : ',\\) ');
-                                    }
-                                }
-                            }
-                            edgeSet.innerHTML += '\\(\\}\\)';
-                            calcEdges.innerHTML = '';
-                            if (vertices.length > 1) {
-                                numEdges = combination(vertices.length, 2);
-                                calcEdges.innerHTML = 'You\'ll have ' + '\\(\\begin{pmatrix} '+ vertices.length +' \\\\ 2 \\end{pmatrix} = {' + vertices.length + '! \\over 2!(' + vertices.length + '-2)!} = ' + numEdges + '\\)' + (numEdges == 1 ? ' edge' : ' edges') + ' since the graph is composed of \\(' + vertices.length + '\\)' + ' vertices.';
-                            } else {
-                                calcEdges.innerHTML = 'There are \\(0\\) edges since the graph is composed of ' + (vertices.length == 1 ? ' \\(1\\) vertex.' : ' \\(0\\) vertices.');
-                            }
-                            MathJax.Hub.Queue(function() {
-                                MathJax.Hub.Typeset('cex');
-                            });
-                        }
-                    </script>
+                    <p class="process-label" onclick="loadex('cex','cp')">Probability Density Functions</p>
+                    <p>Given a continuous random variable \(X\), the probability mass function \(f(x)\) satisfies:</p>
+                    <ol>
+                        <li>\(f(x) \geq 0\)</li>
+                        <li>\(\int_{-\infty}^\infty{f(x)}dx = 1\)</li>
+                        <li>\(P(a \leq X \leq b) = \int_a^b{f(x)}dx = \) area under \(f(x)\) from \(a\) to \(b\) for any \(a, b\) </li>
+                    </ol>
                 </div>
             </div>
             <div class="process">
-                <p class="process-label">Complements</p>
-                <p>Given \(G\), a loop-free undirected graph with \(n\) vertices,</p>
-                <p>\(G\)'s complement is \(\bar G\)</p>
-            </div>
-            <!-- <div class="process">
-                <p class="process-label">Graph Isomorphism</p>
-                <p>\(P_n\): path with \(n\) edges (\(n \geq 1\)). has \(n + 1\) vertices</p>
-                <p>\(C_n\)</p>
-            </div> -->
-            <div class="process">
-                <p class="process-label">Handshake Lemma</p>
-                <p>In a multigraph, $$\sum_{v \in V}deg(v) = 2|E|$$</p>
+                <p class="process-label">Inclusive/Exclusive Boundaries are Irrelevant</p>
+                <p>Given a continuous random variable \(X\), for any \(x_1\) and \(x_2\), $$P(x_1 \leq X \leq x_2) = P(x_1 \lt X \leq x_2) = P(x_1 \leq X \lt x_2) = P(x_1 \lt X \lt x_2) $$</p>
             </div>
         </div>
     </div>
