--- a/skills/disc-cdfs.html
+++ b/skills/disc-cdfs.html
@@ -23,7 +23,7 @@
         <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
         <div class="content">
-            <h1>Discrete Cumulative Disctribution Functions</h1> 
+            <h1>Discrete Cumulative Distribution Functions</h1> 
                 <div class="process">
                     <p class="process-label">Discrete Cumulative Disctribution Function</p>
                     <p>Given a discrete random variable \(X\), the cumulative distribution function \(F(x)\) satisfies the following properties:</p>
