--- a/skills/electric-charge-force.html
+++ b/skills/electric-charge-force.html
@@ -26,7 +26,7 @@
             <h1>Electric Charge & Force</h1>
             <div class="process">
                 <p class="process-label">Coulomb Force for Point Particles</p>
-                <p>Coulomb's law is used to calculate the magnitude of force between two charged point particles:$$|\vec{F}| = F = {1 \over 4\pi \epsilon_0}{|Q_1Q_2| \over r^2}$$</p>
+                <p><span class="k">Coulomb's law</span> is used to calculate the magnitude of force between two charged point particles:$$|\vec{F}| = F = {1 \over 4\pi \epsilon_0}{|Q_1Q_2| \over r^2}$$</p>
             </div>
         </div>
     </div>
