--- a/skills/int-datatypes.html
+++ b/skills/int-datatypes.html
@@ -26,19 +26,20 @@
             <h1>Integer Data Types</h1> 
             <div class="process">
                 <p class="process-label">Unsigned Integers</p>
-                <p>Unsigned integers only have a magnitude; they are neither negative nor positive.</p>
+                <p><span class="k">Unsigned integers</span> only have a magnitude; they are neither negative nor positive.</p>
             </div>
             <div class="process">
                 <p class="process-label">Signed Magnitude Integers</p>
-                <p>Signed magnitude integers are the same as unsigned integers, except the leftmost bit is reserved for the sign. If the leftmost bit is 0, the number is positive; if the leftmost bit is 1, the number is negative. </p>
+                <p><span class="k">Signed magnitude integers</span> are the same as unsigned integers, except the leftmost bit is reserved for the sign.</p>
+                <p>If the leftmost bit is 0, the number is positive; if the leftmost bit is 1, the number is negative. </p>
             </div>
             <div class="process">
                 <p class="process-label">1's Complement Integers</p>
-                <p>A positive integer's 1's complement negative is found by flipping all the bits of its binary form. </p>
+                <p>A positive integer's <span class="k">1's complement</span> negative is found by flipping all the bits of its binary form. </p>
             </div>
             <div class="process">
                 <p class="process-label">2's Complement Integers</p>
-                <p>A positive integer's 2's complement negative is found by flipping all the bits of its binary form and adding 1.</p>
+                <p>A positive integer's <span class="k">2's complement</span> negative is found by flipping all the bits of its binary form and adding 1.</p>
             </div>
         </div>
     </div>
