--- a/skills/si-units.html
+++ b/skills/si-units.html
@@ -17,22 +17,19 @@
 
             <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
-        <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
         <div class='content'>
             <h1 style="margin:0">SI Units</h1>
             <p style='font-size:12px;'>(Syst&eacute;me Internationale)</p>
-                <!-- NEEDS WAY TO SHRINK AND BE VISIBLE ON MOBILE -->
-            <table>
-                <tr><th>Symbol</th><th>Name</th><th>Quantity</th></tr>
-                <tr><td>s</td><td>second</td><td>time</td></tr>
-                <tr><td>m</td><td>meter</td><td>length</td></tr>
-                <tr><td>kg</td><td>kilogram</td><td>mass</td></tr>
-                <tr><td>A</td><td>ampere</td><td>electric current</td></tr>
-                <tr><td>K</td><td>kelvin</td><td>thermodynamic temperature</td></tr>
-                <tr><td>mol</td><td>mole</td><td>amount of substance</td></tr>
-                <tr><td>cd</td><td>candela</td><td>luminous intensity</td></tr>
-            </table>
+            <div class="process">
+                <p class="process-label">SI Base Units</p>
+                <p>The <span class="k">second</span> (s) measures time.</p>
+                <p>The <span class="k">meter</span> (m) measures length.</p>
+                <p>The <span class="k">kilogram</span> (kg) measures mass.</p>
+                <p>The <span class="k">ampere</span> (A) measures electric current.</p>
+                <p>The <span class="k">mole</span> (mol) measures amount of substance.</p>
+                <p>The <span class="k">candela</span> (cd) measures luminous intensity.</p>
+            </div>
             <!-- <div class="process">
             <p class="process-label">Time</p>
             <p>Time - as in tiiime 2 bomb ur dorm</p>
