--- a/topics/areas.html
+++ b/topics/areas.html
@@ -15,6 +15,11 @@
   <script>includeHTML();</script>
   <h1>Areas of Study</h1>
   <div class='content' style="margin-top:20px;display:flex;flex-flow: rcolumn wrap;align-items:flex-start">
+    <style>
+      .card {
+        padding-top:0;
+      }
+    </style>
       <div class="process formsci" style="padding-bottom:0">
         <p class='process-label'>Mathematics</p>
         <div class='cards' style="margin-bottom:0">
@@ -57,7 +62,7 @@
           <a class='card' id='u'>Modern Physics</a>
           <a class="card" id="u">Quantum Mechanics</a>
           <a class="card" id="u">Cosmology</a>
-          <a class='card' href='chemistry.html' id="u">General Chemistry</a>
+          <a class='card' href='chemistry.html'>General Chemistry</a>
           <a class="card" id="u">Organic Chemistry</a>
           <a class='card' id='u'>Biology</a>
           <a class='card' id='u'>Astronomy</a>
