--- a/topics/chemistry.html
+++ b/topics/chemistry.html
@@ -10,7 +10,7 @@
     <script type=text/javascript src='/js/index.js'></script>
     <script type="text/javascript" src="/js/outlines.js"></script>
 </head>
-<body  onload="setTopic('chemistry'); writeOutline('area', 'Chemistry')">
+<body  onload="setTopic('chemistry'); writeOutline('area', 'General Chemistry')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
