--- a/skills/ieee754.html
+++ b/skills/ieee754.html
@@ -25,14 +25,19 @@
                 <h1>IEEE-754 Floating Point</h1>
                 <div class="process">
                     <p class="process-label">IEEE-754 Floating Point Notation</p>
-                    <p>The IEEE-754 standard defines a 32-bit floating point number as 1 sign bit, 8 exponent bits, and a 23-bit mantissa: $$(-1)^\text{sign} \times 2^{\text{exponent} - 127} \times 1.\text{mantissa} $$</p>
+                    <p>The IEEE-754 standard defines a 32-bit floating point number as \(1\) sign bit, \(8\) exponent bits, and a \(23\)-bit mantissa: $$(-1)^\text{sign} \times 2^{\text{exponent} - 127} \times 1.\text{mantissa} $$</p>
+                    <p>Valid exponent values are on the interval [\(-126, 127\)]. </p>
                 </div>
                 <table>
                     <tr><th>Edge Cases</th><th>E == 0</th><th>0 &lt; 255 &lt; E</th><th>E == 255</th></tr>
                     <tr><th>M == 0</th><td>0</td><td>Powers<br>of 2</td><td><span style='transform:scale(3.5);'>&infin;</span></td></tr>
-                    <tr><th>M != 0</th><td>Non-normalized<br>typically underflow</td><td>Ordinary<br>old numbers</td><td>NaN</td></tr>
+                    <tr><th>M != 0</th><td>Non-normalized<br>typically underflow</td><td>Regular numbers</td><td>NaN</td></tr>
                 </table>
-                <p>So valid exponents can range from -126 to 127</p>
+                <script>
+                    console.log(getName('f'));
+                    console.log(getName('m'));
+                    console.log(myMap.get('Avogadro\'s number'));
+                </script>
                 <!-- <p class='cards-label'>Converting decimal portion to binary</p>
                 <ul class='process'>
                     <li>Keep multiplying by 2 until you reach 1 or you use up 23 bits.</li>
