--- a/skills/stem-leaf-diagrams.html
+++ b/skills/stem-leaf-diagrams.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scalars & Vectors</title>
+    <title>Stem-and-Leaf Diagrams</title>
     <link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
@@ -12,25 +12,29 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
-<body onload="writeOutline('areas', 'Scalars & Vectors')">
+<body onload="writeOutline('areas', 'Stem-and-Leaf Diagrams')">
     <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
         <div class="desktop-only skills" id="skills">
 
-            <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
+            <span class='tab formsci' id="tab" onclick="openOutline()">&#x25c0;</span>
         </div>
         <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
         <div class="content">
-            <h1>Scalars & Vectors</h1> 
-                <div class="process">
-                    <p class="process-label">Scalars & Vectors</p>
-                    <p>A <span class="k">scalar</span> is a quantity defined by a magnitude.</p>
-                    <p>A <span class="k">vector</span> is a quantity with a magnitude and a direction.</p>
-                </div>
+            <h1>Stem-and-Leaf Diagrams</h1> 
+                <!-- <div class="definition"> -->
+                    <!-- <div class="process" id="rp">
+                        <p class="process-label">Function</p>
+                        <p>A function \(f: A \rightarrow B\) is onto, or surjective, if for all \(b \in B\) there is at least one \(a \in A\) with \(f(a) = b\). </p>
+                    </div> -->
+                    <!-- <div class="process example" id="rex">
+                        <p>The fibonacci sequence is defined as $$f(0) = f(1) = 1$$ $$f(n) = f(n-1) + f(n-2) \text{ for } n \geq 2$$</p>
+                    </div>
+                </div> -->
         </div>
     </div>
-    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>  
+    <div style="width:95%" include-html='/footer-nm.html' src='/js/index.js'></div>
 </body>
 </html>
