--- a/topics/music-theory.html
+++ b/topics/music-theory.html
@@ -9,14 +9,19 @@
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
 </head>
-<body>
+<body  onload="setTopic('music-theory'); writeOutline('area', 'Music Theory')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
-    <div class='content'>
-        <h1>Music Theory</h1>
-        <p class='cards-label'>Aural Skills</p>
-        <div class='cards humanities'>
-            <a class='card' href='/skills/earTraining.html'>Interval Ear Training</a>
+    <div class="content-container">
+        <div class="desktop-only skills" id="skills">
+
+            <span class='tab humanities' id="tab" onclick="openOutline()">&#x25c0;</span>
+        </div>
+        <!-- get the function for writing the course outline in the skills menu -->
+        <script type="text/javascript" src="/js/outlines.js"></script>
+        
+        <div class="content" id="content">
+
         </div>
     </div>
     <div id='footer' include-html='/footer.html' src='js/index.js'></div>
