--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <script>includeHTML();</script>
     <h1>About</h1>
     <div class='content' style="display:flex;flex-flow:row wrap;justify-content:center;margin-top:20px;align-items:center; gap:25px">
-        <h5 class='cards' style='margin: 0;max-width:400px;border:none;text-align:center;min-width:200px;font-weight:300'>Hello, my name is Brandon Schmitz. I'm a second-year Computer Science student at Georgia Tech. The goal of this site is to provide learning tools for various college courses.<br><br>It will always be free and ad-free&mdash;I'm of the opinion that education should not be tainted with pop-ups or pay-to-win crap, so I'll stay broke but at least the site doesn't suck. Thanks for checking it out!</h4>
+        <h5 class='cards' style='margin: 0;max-width:400px;border:none;text-align:center;min-width:200px;font-weight:300'>Hello, my name is Brandon Schmitz. I'm a rising third-year Computer Science student at Georgia Tech. The goal of this site is to provide learning tools for various college courses.<br><br>It will always be free and ad-free&mdash;I'm of the opinion that education should not be tainted with pop-ups or pay-to-win crap, so I'll stay broke but at least the site doesn't suck. Thanks for checking it out!</h4>
         <figure style="margin:0">
             <img src="imgs/me.jpeg" id="me" style="margin:0;height:250px;border-radius:0;border:1px solid rgb(88, 88, 88);">   
             <!-- <figcaption style="text-align:center">this.... is... me</figcaption> -->
